fixing docker envs

--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -3,6 +3,10 @@ FROM pytorch/pytorch:2.2.2-cuda12.1-cudnn8-runtime
 # System deps
 RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
 
+# Install CUDA toolkit for building extensions
+RUN apt-get update && apt-get install -y cuda-toolkit-12-1
+ENV CUDA_HOME=/usr/local/cuda
+
 # Create non-root user
 RUN useradd -ms /bin/bash user
 USER user
