--- a/ds_config.json
+++ b/ds_config.json
@@ -5,5 +5,15 @@
   "zero_optimization": {
     "stage": 2,
     "offload_optimizer": { "device": "cpu" }
-  }
+  },
+  "optimizer": {
+    "type": "AdamW",
+    "params": {
+      "lr": 5e-5,
+      "betas": [0.9, 0.999],
+      "eps": 1e-8,
+      "weight_decay": "auto"
+    }
+  },
+  "zero_force_ds_cpu_optimizer": false
 }
